# rust-zc

./: .travis.yml  Cargo.toml  README.md  tarpaulin.toml
.github/workflows/: build.yml
examples/: parsing.rs
src/: impl.rs  lib.rs  macros.rs  option.rs  private.rs  result.rs
tests/: test_invalid_use.rs  test_zc.rs
tests/invalid-use/: dependant_interior_mut.rs  dependant_interior_mut.stderr  get_dependant_with_static.rs  get_dependant_with_static.stderr  non_static_error.stderr  non_static_ref_into_f.rs  non_static_ref_into_f.stderr  steal_owned_data.rs  steal_owned_data.stderr  two_lifetimes_on_dependant.rs  unguarded_on_guarded.rs  unguarded_on_guarded.stderr  use_dependant_ref_after_drop.rs  use_dependant_ref_after_drop.stderr
tests/invalid-use/before-1-49/: two_lifetimes_on_dependant.stderr
tests/invalid-use/nightly/: non_static_error.rs  non_static_error.stderr  steal_owned_data.stderr
tests/invalid-use/since-1-49/: dependant_interior_mut.stderr  two_lifetimes_on_dependant.stderr
tests/invalid-use/stable/: dependant_interior_mut.rs  dependant_interior_mut.stderr  non_static_error.stderr  steal_owned_data.rs  steal_owned_data.stderr
tests/invalid-use/todo/: non_static_error.rs  non_static_ref_into_f.rs
zc-derive/: Cargo.toml
zc-derive/src/: lib.rs
