[package]
name = "zc"
version = "0.1.0"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
description = "Self-referential zero-copy structure"
categories = ["no-std", "memory-management", "data-structures"]
documentation = "https://docs.rs/zc"
homepage = "https://github.com/avitex/rust-zc"
repository = "https://github.com/avitex/rust-zc"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]

[features]
default = ["alloc"]
alloc = ["aliasable"]

[dependencies]
zc-derive = { version = "0.1", path = "./zc-derive" }
aliasable = { version = "0.1.2", optional = true }

[dev-dependencies]
trybuild = "1.0"
dangerous = "0.5"
once_cell = "1.5"
rustversion = "1.0"

[workspace]
members = [
    ".",
    "./zc-derive",
]
