[package]
name = "zc-derive"
version = "0.1.0"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
description = "Derive macro for zc crate"
categories = ["no-std", "data-structures"]
documentation = "https://docs.rs/zc"
homepage = "https://github.com/avitex/rust-zc"
repository = "https://github.com/avitex/rust-zc"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
